--- a/style.css
+++ b/style.css
@@ -173,6 +173,10 @@ p {
     border-radius: var(--size-border-radius);
 }
 
+.home__contact:hover {
+    background-color: var(--color-orange);
+}
+
 /* Section common */
 .section {
     padding: 50px;
