--- a/style.css
+++ b/style.css
@@ -474,6 +474,28 @@ p {
     transition: all var(--animation-duration) ease-in;
 }
 
+/* Scroll */
+.arrow-up {
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
+    width: 70px;
+    height: 70px;
+    font-size: 50px;
+    color: var(--color-white);
+    background-color: var(--color-pink);
+    border-radius: 50%;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 300ms ease-in;
+}
+
+.arrow-up.visible {
+    display: block;
+    opacity: 1;
+    pointer-events: auto;
+}
+
 /* For below 768px screen width */
 @media screen and (max-width: 768px) {
     .navbar__toggle-btn {
@@ -511,25 +533,4 @@ p {
         width: 80px;
         height: 80px;
     }
-}
-
-/* button go top */
-.btn__go__top {
-    position: fixed;
-    width: 120px;
-    height: 120px;
-    background-color: var(--color-dark-pink);
-    right: 1.4rem;
-    bottom: 1.4rem;
-    border-radius: 50%;
-    scroll-behavior: smooth;
-    visibility: hidden;
-}
-
-.btn__go__top span {
-    display: flex;
-    justify-content: center;
-    line-height: 120px;
-    font-size: 64px;
-    color: var(--color-white);
 }
