--- a/style.css
+++ b/style.css
@@ -320,7 +320,7 @@ p {
     border: 1px solid var(--color-dark-white);
     border-radius: var(--size-border-radius);
     font-size: var(--font-regular);
-    padding: 8px 48px;
+    padding: 8px 24px 8px 48px;
 }
 
 .category__btn:active,
